--- a/tasks/install-postgres.yml
+++ b/tasks/install-postgres.yml
@@ -4,15 +4,9 @@
 
 
 - name: install postgresql
-  package:
+  apt:
     name:
       - postgresql
       - python3-psycopg2
       - acl # for become_user to work with unprivileged user
     state: present
-
-
-- name: Start and enable services
-  service: "name={{ item }} state=started enabled=yes"
-  with_items:
-    - postgresql
